# genforge

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: capsule_readme.txt
examples/ARWPM Classification Example/: ARWPM_Groups.csv  Example_ARWM_ensemble_1.html  Example_ARWPM_2.py  divide.py  minus.py  plus.py  power.py  times.py
examples/SFRC Regression Example/: SFRC_Example_2.py  SFRC_Groups.csv  SFRC_Normalized_x_test.csv  SFRC_Normalized_x_train.csv  SFRC_Normalized_x_validation.csv  SFRC_Normalized_y_test.csv  SFRC_Normalized_y_train.csv  SFRC_Normalized_y_validation.csv  divide.py  minus.py  plus.py  power.py  sqrt.py  times.py
examples/SPFP Example/: ARWPM_Normalized_x_validation.csv  ARWPM_Normalized_y_test.csv  ARWPM_Normalized_y_train.csv  ARWPM_Normalized_y_validation.csv  SPFP_Example.py
genforge/: __init__.py  _info.py  _log.py  exceptions.py
genforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
genforge/gpclassifier/: SoftmaxModel.py  __init__.py  gp_cache_class.py  gp_cache_enable_class.py  gp_class.py  gp_config_class.py  gp_config_data_class.py  gp_config_utils_class.py  gp_displaystats_class.py  gp_evalfitness_ord_class.py  gp_evalfitness_par_class.py  gp_evaluate_ensemble_ord_class.py  gp_evaluate_ensemble_par_class.py  gp_evaluate_softmax_custom.py  gp_evaluate_tree_class.py  gp_extract.py  gp_fitness_init_class.py  gp_getcomplexity.py  gp_getnumnodes.py  gp_html_report_class.py  gp_individuals_ensemble_class.py  gp_picknode.py  gp_plot_runtime.py  gp_plotfitness_class.py  gp_plotrankall_class.py  gp_plotrankbest_class.py  gp_popbuild_class.py  gp_popbuild_init.py  gp_predict_class.py  gp_selection.py  gp_state_init_ensemble_class.py  gp_track_param_ensemble_class.py  (+6 more)
(+46 files in other folders)
